[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/UI/ecran_pause.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/bouton_pause_resume.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/bouton_pause_howtoplay.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/bouton_pause_Titlescreen.png" type="Texture" id=4]
[ext_resource path="res://scripts/Pause.gd" type="Script" id=5]

[node name="Pause" type="Node2D"]
z_index = 5
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.83191, 0.83191 )
texture = ExtResource( 1 )
centered = false

[node name="Resume" type="TextureButton" parent="."]
margin_left = 595.0
margin_top = 200.0
margin_right = 1119.0
margin_bottom = 337.0
rect_scale = Vector2( 0.756642, 0.756642 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowTo" type="TextureButton" parent="."]
margin_left = 595.0
margin_top = 335.0
margin_right = 1116.0
margin_bottom = 468.0
rect_scale = Vector2( 0.757, 0.757 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureButton" parent="."]
margin_left = 600.0
margin_top = 475.0
margin_right = 1122.0
margin_bottom = 607.0
rect_scale = Vector2( 0.757, 0.757 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="HowTo" to="." method="_on_HowTo_pressed"]
[connection signal="pressed" from="Title" to="." method="_on_Title_pressed"]
